hard-gists/5036f784eec2036252e1990da21eda18/run.log
=== Docker Run Log for 5036f784eec2036252e1990da21eda18 ===
Started at: Mi 29. Okt 15:19:47 CET 2025

[2025-10-29 15:19:48] START: Running container for 5036f784eec2036252e1990da21eda18
[2025-10-29 15:19:48] SUCCESS: Container ac5986d26f6323852b65c0703f248856ac6fc22027b46009e79213ff8edcd266 started for 5036f784eec2036252e1990da21eda18
=== Container logs for 5036f784eec2036252e1990da21eda18 ===
  File "/snippet.py", line 90
    print "no saved model to load. starting new session"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5036f784eec2036252e1990da21eda18 ===
[2025-10-29 15:19:50] INFO: Container ac5986d26f6323852b65c0703f248856ac6fc22027b46009e79213ff8edcd266 has stopped
